--- a/PAPER/BiologyBib.bib
+++ b/PAPER/BiologyBib.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Graham Northrup at 2017-03-14 20:30:14 -0500 
+%% Created for Graham Northrup at 2017-03-15 11:48:24 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{colors,
+	Author = {David E. Somers},
+	Date-Added = {2017-03-15 16:40:18 +0000},
+	Date-Modified = {2017-03-15 16:48:24 +0000},
+	Journal = {Science},
+	Title = {Phytochroms and cryptochromes in the entrainment of the Arabidopsis circadian clock},
+	Year = {1998}}
 
 @article{control,
 	Author = {Junil Kim},
